--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     height: 30px;
     border: 3px solid;
     border-radius: 12px;
-    background-color: bisque;
+    background-color: #333333;
     color: white;
     cursor: pointer;
     font-family: consolas, monospace;
